--- a/images/docker-compose.yml
+++ b/images/docker-compose.yml
@@ -1,71 +1,28 @@
 # yaml 配置
 services:
-  mongodb:
-    image: mongodb:$version
-    container_name: mongodb
+  hotel_demo:
+    image: hotel_demo:${version}
+    container_name: hotel_demo
     build:
       context: ..
-      dockerfile: ./docker/mongodb/Dockerfile
+      dockerfile: ./docker/ubuntu/Dockerfile
     logging:
       driver: "json-file"
       options:
         max-size: "10M"
         max-file: "10"
-    healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
-      interval: 10s
-      timeout: 10s
-      retries: 5
     volumes:
       - ${VOLUME_PATH}/mongo/data:/data/db
+      - ${VOLUME_PATH}/backend/logs:/www/backend/logs
     ports:
       - "${MY_MONGODB_PORT}:27017"
-    networks:
-      - hotel-network
-  backend:
-    image: backend:$version
-    container_name: backend
-    build:
-      context: ..
-      dockerfile: ./docker/backend/Dockerfile
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10M"
-        max-file: "10"
-    volumes:
-      # - ${VOLUME_PATH}/backend/config:/www/backend/config
-      - ${VOLUME_PATH}/backend/logs:/www/backend/logs
-    depends_on:
-      - mongodb
-    ports:
       - "${MY_SERVER_PORT}:4000"
-    networks:
-      - hotel-network
-  website:
-    image: website:$version
-    container_name: website
-    build:
-      context: ..
-      dockerfile: ./docker/web/Dockerfile
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10M"
-        max-file: "10"
-    ports:
       - "${MY_WEB_PORT}:80"
-    depends_on:
-      - backend
+    stdin_open: true  # 允许标准输入保持打开状态（适用于交互式会话）
+    tty: true         # 分配一个伪终端，让你可以保持连接
     networks:
-      - hotel-network
-    links:
-      - backend:backend
-    ulimits:
-      nproc: 65535
-      nofile:
-        soft: 65535
-        hard: 65535
+      - hotel_network
+
 networks:
-  hotel-network:
+  hotel_network:
     driver: bridge
